# btwin-runtime

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/local/: token-usage-management-policy.ko.md
docs/plans/: 2026-04-15-env-sh-test-helper-design.md  2026-04-15-test-env-cli-plan.md  2026-04-16-unified-test-runner-design.md  2026-04-16-unified-test-runner-implementation-plan.md  2026-04-18-protocol-dsl-guide.md
scripts/: attached_helper_smoke.sh  bootstrap_isolated_attached_env.sh  codex_session_health.sh  install_btwin_macos.sh
src/btwin_cli/: __init__.py  api_app.py  api_entries.py  api_events.py  api_helpers.py  api_indexer.py  api_orchestration.py  api_providers.py  api_runtime_logs.py  api_sessions.py  api_settings.py  api_sources.py  api_terminals.py  api_threads.py  doc_sync.py  instructions.py  main.py  mcp_proxy.py  migration.py  resource_paths.py
src/btwin_core/: agent_registry.py  agent_runner.py  agent_store.py  audit.py  auth_adapters.py  common_record_models.py  conductor.py  consolidation.py  context_formatter.py  event_bus.py  (+30 more)
tests/: conftest.py  protocol_scenario_matrix.py  test_agent_inbox_command.py  test_agent_runner_delegation.py  test_agent_runner_live_transport.py  test_agent_runner_typing_cleanup.py  test_api_protocol_authoring.py  test_api_threads.py  test_api_threads_close.py  test_attached_helper_smoke_script.py  test_bootstrap_isolated_attached_env.py  test_closed_thread_gc.py  test_codex_app_server_adapter.py  test_codex_persistent_adapter.py  test_codex_project_config.py  test_codex_session_health_script.py  test_config_path.py  test_context_formatter.py  test_delegate_command.py  test_delegation_engine.py  test_delegation_store.py  test_guidance_resources.py  test_handoff_command.py  test_hud_command.py  test_init_command.py  test_install_script.py  test_install_skills_command.py  test_live_command.py  test_mcp_proxy.py  test_phase_cycle_contract.py  test_phase_cycle_engine.py  test_phase_cycle_engine_contract.py  test_phase_cycle_engine_integration.py  test_phase_cycle_models.py  test_phase_cycle_store.py  test_protocol_apply_next_command.py  test_protocol_cli_authoring.py  test_protocol_command.py  test_protocol_dsl_authoring_models.py  test_protocol_dsl_compiler.py  (+24 more)
(+37 files in other folders)
