[project]
name = "btwin-cli"
version = "0.1.0"
description = "CLI control plane for the B-TWIN collaboration runtime"
requires-python = ">=3.11"
dependencies = [
    "btwin-core>=0.1.0",
    "typer>=0.15",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.116.0",
    "httpx>=0.27",
    "mcp[cli]>=1.2",
]

[project.scripts]
btwin = "btwin_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/btwin_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/btwin_cli/skills" = "btwin_cli/skills"
"src/btwin_cli/global" = "btwin_cli/global"

[tool.hatch.build.targets.sdist]
include = [
    "src/btwin_cli/skills/**",
    "src/btwin_cli/global/**",
]
