[project]
name = "btwin"
version = "0.1.0"
description = "Runtime workspace for the packaged B-TWIN core and CLI"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6",
    "litellm>=1.55",
    "mcp[cli]>=1.2",
    "typer>=0.15",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.116.0",
    "httpx>=0.27",
]

[project.scripts]
btwin = "btwin_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/btwin-cli/src/btwin_cli", "packages/btwin-core/src/btwin_core"]

[tool.pytest.ini_options]
pythonpath = [
    "packages/btwin-cli/src",
    "packages/btwin-core/src",
]

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-html>=4.1",
]
